[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["frankfnagli <frankfangli@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
Nikola = {extras = ["extras"], version = "^8.1.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
